--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,15 @@
 <h1>Contact Page</h1>
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    {{input type="email" value=emailAddress class="form-control" placeholder="Please type your e-mail address." autofocus="autofocus"}}
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="text">Text</label>
+            {{textarea class="form-control" placeholder="Your message. (At least 5 characters.)" rows="5" value=message}}
+            {{#if model.isMessageEnoughLong}}<span class="glyphicon glyphicon-ok form-control-feedback"></span>{{/if}}
+
+  </div>
+  <button disabled={{isNotValid}} {{action 'submitButton'}} type="submit" class="btn btn-primary">Submit</button>
+</form>
